# ErisPulse-GitHubWebhook

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
ErisPulse_GitHubWebhook/: Core.py  __init__.py  utils.py
ErisPulse_GitHubWebhook/handlers/: __init__.py  issues_handler.py  pr_handler.py  push_handler.py  release_handler.py  star_handler.py  workflow_handler.py
